added text about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,6 +6,7 @@
 <body>
     <div class="main-content">
         {{> header}}
+        <p>This apps has text</p>
         <img class="portrait" src="/img/robot.png">
     </div>
     {{>footer}}
